# synapselang

./: CITATION.cff  LICENSE  README.md  ROADMAP.md  SPEC_NOTES.md  pyproject.toml
examples/: autodiff_scalar.syn  tensor_demo.syn
synapse/: __init__.py  ast.py  cli.py  lexer.py  parser.py  resolver.py  tokens.py  typechecker.py  types.py
synapse/autodiff/: __init__.py  backward.py  graph.py  ops.py  structured_grads.py  tensor.py
synapse/runtime/: __init__.py  builtins.py  environment.py  evaluator.py  values.py
synapse/stdlib/: __init__.py  mathlib.py  nnlib.py  optimlib.py  randomlib.py
tests/: test_smoke.py
